// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserRepositoriesList should render UserRepositoriesList 1`] = `
<div>
  <ul
    class="MuiList-root MuiList-padding"
  >
    <li>
      UserRepositoriesListItem
    </li>
  </ul>
</div>
`;

exports[`UserRepositoriesList should render empy page 1`] = `
<div>
  <ul
    class="MuiList-root MuiList-padding"
  >
    <li
      class="MuiListItem-root MuiListItem-gutters MuiListItem-alignItemsFlexStart"
    >
      <div
        class="MuiListItemText-root"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          未发现仓库数据
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`UserRepositoriesList should render error page 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 MuiTypography-colorError MuiTypography-gutterBottom"
  >
    加载用户仓库列表失败
  </p>
</div>
`;
